# go_SimilaritySearch

./: .gitignore  README.md  build.sh  go.mod  main.go
common/: common.go
http/: server.go
searchengine/: CMakeLists.txt  searchengine.go
searchengine/include/: faissengine.h
searchengine/src/: faissengine.cpp
